# file-magic-rs

./: .gitignore  Cargo.toml
src/: data_type.rs  endian.rs  entry.rs  error.rs  from_bytes.rs  hand.rs  lib.rs  magic.rs  parser.rs  parser2.rs
src/magic/: entry.rs  mod.rs  offset.rs  test.rs
src/parser/: ast.rs  data_type.rs  mod.rs  number.rs  offset.rs  parsers.rs  string.rs  test.rs
src/parser/parsers/: data_type.rs  number.rs  offset.rs  string.rs
src/parser2/: mod.rs  parsers.rs
