[package]
name = "file-magic"
version = "0.1.0"
authors = ["Andrew Watts <ahwatts@gmail.com>"]

[[bin]]
name = "compile"
path = "src/bin/compile.rs"

[[bin]]
name = "file"
path = "src/bin/file.rs"

[dependencies]
byteorder = "^0.5.3"
combine = "^2.0.0"
quick-error = "^1.1.0"
num = "^0.1.36"
rustc-serialize = "^0.3.19"
rmp = "^0.7.5"
rmp-serialize = "^0.7.0"
