[package]
name = "file-magic"
version = "0.1.0"
authors = ["Andrew Watts <ahwatts@gmail.com>"]
edition = "2018"

[[bin]]
name = "compile"
path = "src/bin/compile.rs"

[[bin]]
name = "file"
path = "src/bin/file.rs"

[dependencies]
anyhow = "^1.0.35"
byteorder = "^1.0.0"
nom = "^6.0.1"
num = "^0.4.0"
rmp = "^0.8.9"
rmp-serde = "^0.15.0"
serde = { version = "^1.0.118", features = ["derive"] }

# combine = "^2.3.1"
# quick-error = "^1.1.0"
# rmp-serialize = "^0.8.0"
# rustc-serialize = "^0.3.19"
